5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1593_1802.log
== TEST (2019-03-31 20:25:50) 
-- CODE:
from math import
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = |5*d1*0.5+pi**d2/3|
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:30:30) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = |5*d1*0.5+pi**d2/3|
-- ERROR:
File "XXXX", line 5
    dono = |5*d1*0.5+pi**d2/3|
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:31:23) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1*0.5+pi**d2/3)
-- ERROR:
File "XXXX", line 5
    dono = |5*d1*0.5+pi**d2/3|
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:32:07) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1*0.5+pi**d2/3)
print(dono)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:33:03) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1*0.5)+pi**d2/3)
print(dono)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:33:32) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1**0.5)+pi**d2/3)
print(dono)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:59:57) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(|(5*d1*0.5)+pi**d2/3|)
print(dono)
-- ERROR:
File "XXXX", line 5
    dono = int(|(5*d1*0.5)+pi**d2/3|)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:00:15) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(f(5*d1*0.5)+pi**d2/3)
print(dono)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = int(f(5*d1*0.5)+pi**d2/3)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:00:56) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((f)(5*d1*0.5)+pi**d2/3)
print(dono)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = int((f)(5*d1*0.5)+pi**d2/3)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:44) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1*0.5)+pi**d2/3)
print(dono)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:03:58) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(⌊(5*d1*0.5)+pi**d2/3⌋)
print(dono)
-- ERROR:
File "XXXX", line 5
    dono = int(⌊(5*d1*0.5)+pi**d2/3⌋)
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:16) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(⌊5*d1*0.5+pi**d2/3⌋)
print(dono)
-- ERROR:
File "XXXX", line 5
    dono = int(⌊5*d1*0.5+pi**d2/3⌋)
                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:33) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1*0.5+pi**d2/3)
print(dono)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:07:52) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**0.5+(pi)**d2/3)
print(dono)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:08:24) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**0.5+(pi)**(d2/3)
print(dono)
-- ERROR:
File "XXXX", line 6
    print(dono)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:08:48) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**0.5+(pi)**(d2/3)
print(dono)
-- ERROR:
File "XXXX", line 6
    print(dono)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:09:02) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**0.5+(pi)**(d2/3))
print(dono)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:09:39) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**0.5+(pi**d2/3))
print(dono)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:10:00) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**0.5+(pi**d2/3))
print(dono)
-- EXECUTION TIME:
0.140806
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
322
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
325
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:10:26) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.5(pi**d2/3)
print(dono)
-- ERROR:
File "XXXX", line 6
    print(dono)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:10:36) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.5pi**d2/3)
print(dono)
-- ERROR:
File "XXXX", line 5
    dono = int(5*d1**0.5pi**d2/3)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:10:57) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.5+pi**d2/3)
print(dono)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:11:39) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.5+pi**d2/3)
print(dono%)
-- ERROR:
File "XXXX", line 6
    print(dono%)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:13:58) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.5+pi**d2/3)
print(dono)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:14:12) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.5+pi**d2/3)
print(dono)
-- EXECUTION TIME:
0.171856
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
325
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
332
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:15:16) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5**0.5*d1)+pi**d2/3)
print(dono)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:16) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5**0.5*d1)+pi(**d2/3))
print(dono)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = int((5**0.5*d1)+pi(**d2/3))
TypeError: float object argument after ** must be a mapping, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:18:10) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5 * d1 ** 0.5 + pi ** d2 / 3)
print(dono)
-- ERROR:
File "XXXX", line 6
    print(dono)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:18:23) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5 * d1 ** 0.5 + pi ** d2 / 3)
print(dono)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:31) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5 * d1 ** 0.5 + pi ** d2 / 3)
print(dono)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:56:41) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5 * d1 ** 0.5) + (pi ** d2 / 3))
print(dono)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:15:31) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(f)((5 * d1 ** 0.5) + (pi ** d2 / 3))
print(dono)
int(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = int(f)((5 * d1 ** 0.5) + (pi ** d2 / 3))
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:44:54) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono =((5 * d1**2) + (pi**d2 / 3)))
print(dono-b)

-- ERROR:
File "XXXX", line 5
    dono =((5 * d1**2) + (pi**d2 / 3)))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:45:46) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono =((5 *d1)**2 + (pi**d2 / 3))
print(dono-b)

-- OUTPUT:
145.4630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:46:15) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5 *d1)**2 + (pi**d2 / 3))
print(dono-b)

-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:46:52) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5 *d1)**2 + (pi**d2 / 3))
print(dono)

-- OUTPUT:
345
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:47:27) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**2 + (pi**d2/3))
print(dono)

-- OUTPUT:
345
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:38:33) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**2 + (pi**d2/3))
print(dono)

-- OUTPUT:
345
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:38:59) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int((5*d1)**2 + (pi**d2/3))
print(dono)

-- OUTPUT:
345
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:39:50) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.2 + (pi**d2/3))
print(dono)

-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:40:25) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.2 + (pi**d2/3))
print(dono-b)

-- OUTPUT:
125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:41:08) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(5*d1**0.02 + (pi**d2/3))
print(b-dono)

-- OUTPUT:
-125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:32:16) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valores sorteados no lancamento de dois dados de vinte faces "))
d2 =int(input(""))
dono = int(((5*d1)**0.2) + (pi**d2/3))
print(b-dono)

-- OUTPUT:
-121
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:56:25) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrd(5*d1))+ (pi**d2/3))
print(dono)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dono = int((sqrd(5*d1))+ (pi**d2/3))
NameError: name 'sqrd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:57:01) 
-- CODE:
from math import*
b = int(input("pontos de vida"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+ (pi**d2/3))
print(dono)

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:57:16) 
-- CODE:
from math import*
b = int(input("pontos de vida:"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+ (pi**d2/3))
print(dono)

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:57:55) 
-- CODE:
from math import*
b = int(input("pontos de vida:"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+ (pi**d2/3))
print(d-dono)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(d-dono)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:58:16) 
-- CODE:
from math import*
b = int(input("pontos de vida:"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+ (pi**d2/3))
print(b-dono)

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:00:05) 
-- CODE:
from math import*
b = int(input("pontos de vida:"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+pi*(d2/3))

print(b-dono)

-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:00:32) 
-- CODE:
from math import*
b = int(input("pontos de vida:"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+pi*(d2/3))

print(b-dono)

-- EXECUTION TIME:
0.162654
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:00:47) 
-- CODE:
from math import*
b = int(input("pontos de vida:"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+pi**(d2/3))

print(b-dono)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:01:01) 
-- CODE:
from math import*
b = int(input("pontos de vida:"))
d1 = int(input("valor de d1:"))
d2 =int(input("valor de d2:"))

dono = int((sqrt(5*d1))+pi**(d2/3))

print(b-dono)

-- EXECUTION TIME:
0.157357
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
